Fix broken layout on profile.html

--- a/views/styles/profile.css
+++ b/views/styles/profile.css
@@ -4,12 +4,14 @@
 }
 
 .profile-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(3, 33%);
+  grid-template-rows: 100%;
 }
 
 .profile-picture {
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
   padding: 0 10px;
   text-align: center;
   display: flex;
@@ -43,6 +45,8 @@
 }
 
 .profile-name {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
   text-align: right;
 }
 
@@ -73,6 +77,11 @@
 .edit-profile a {
   margin: auto;
   text-decoration: none;
+}
+
+.profile-info {
+  grid-column: 3 / span 1;
+  grid-row: 1 / span 1;
 }
 
 .profile-description {
@@ -183,6 +192,7 @@
 @media only screen and (max-width: 599px) {
   .profile-header {
     display: grid;
+    grid-template-columns: 100%;
     grid-template-rows: 40% 15% 45%;
     margin: 0 2%;
     justify-content: unset;
@@ -190,6 +200,7 @@
 
   .profile-picture {
     padding: 0;
+    grid-column: 1 / span 1;
     grid-row: 1 / span 1;
     width: auto;
     height: 100%;
@@ -202,6 +213,7 @@
   }
 
   .profile-name {
+    grid-column: 1 / span 1;
     grid-row: 2 / span 1;
     text-align: center;
     position: relative;
@@ -224,6 +236,7 @@
   }
 
   .profile-info {
+    grid-column: 1 / span 1;
     grid-row: 3 / span 1;
     margin-bottom: 40%;
   }
